update home pagee

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,24 +32,6 @@
 	<div class="content-wrapper">
 		<div class="container">
 
-			<!-- <div class="row pad-botm col-md-12">
-				<div class="row">
-					<div class="col-md-2">
-						<h4 class="text-line">Thời gian: </h4>
-					</div>
-					<div class="col-md-10">
-						<div id="selector" class="btn-group" role="group" aria-label="Basic example">
-							<button type="button" class="btn btn-outline-primary active" value="0">Hôm nay </button>
-
-							<button type="button" class="btn btn-outline-primary" value="3">3 ngày trước</button>
-							<button type="button" class="btn btn-outline-primary" value="7">1 tuần trước</button>
-							<button type="button" class="btn btn-outline-primary" value="31">1 tháng trước</button>
-							<button type="button" class="btn btn-outline-primary" value="365">1 năm trước</button>
-						</div>
-					</div>
-				</div>
-				<br />
-			</div> -->
 			<h4 class="header-line">THỐNG KÊ TỔNG THU - SL ĐƠN HÀNG - SL NGƯỜI DÙNG</h4>
 			<div class="row">
 				<div class="col-md-4 col-sm-4 col-xs-6">
@@ -75,19 +57,8 @@
 				</div>
 			</div>
 
-			<h4 class="header-line">THỐNG KÊ SẢN PHẨM ĐÃ BÁN</h4>
+			<h4 class="header-line">THỐNG KÊ TOP 10 SẢN PHẨM ĐÃ BÁN</h4>
 			<div class="row">
-				<!-- <div class="col-md-4 col-sm-4 col-xs-12">
-					<div class="panel">
-						<div class="panel-heading header-panel">
-							Hình ảnh 10 sản phẩm bán chạy nhất
-						</div>
-						<div class="panel-body text-center top-10-img" id="image-sold-product">
-
-						</div>
-
-					</div>
-				</div> -->
 				<div class="col-md-12 col-sm-12 col-xs-12">
 					<div class="panel">
 						<div class="panel-heading header-panel">
