--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
             <ul id="menu-top" class="nav navbar-nav navbar-right">
               <li><a href="/home">THỐNG KÊ</a></li>
               <li><a href="/order">ĐƠN ĐẶT HÀNG</a></li>
-              <li><a href="/store">GIAN HÀNG</a></li>
+              <li><a href="/store">CHI NHÁNH</a></li>
               <li><a href="/product">SẢN PHẨM</a></li>
               <li><a href="/user">NGƯỜI DÙNG</a></li>
             </ul>
