--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
 	<!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <![endif]-->
-	<title>ShopPhukien_Admin</title>
+	<title>Elctro Admin</title>
 	<!-- CHART -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
 	<!-- BOOTSTRAP CORE STYLE  -->
