--- a/views/pages/store.ejs
+++ b/views/pages/store.ejs
@@ -145,6 +145,34 @@
    <!-- CUSTOM SCRIPTS  -->
    <script src="javascripts/custom.js"></script>
 
+   <!--    Add new Store-->
+   <script>
+      $("#btn-add-store").click(function () {
+         $("#my-form").attr('action', '/store/add');
+         $('#txt-store-name').attr('placeholder', '');
+         $('#txt-store-des').attr('placeholder', '');
+         $('#txt-store-image').attr('src', 'images/imageHolder.png');
+         $('#txt-store-address').attr('placeholder', '');
+      })
+
+      $(".open-dialog").click(function () {
+         var id = $(this).data('id');
+         $("#my-form").attr('action', '/store/edit');
+         var name = $(this).find(".store-name span").text();
+         var address = $(this).find(".store-address").text();
+         var img = $(this).find(".img-store").attr('src');
+         var id = $(this).find(".img-store").data("id");
+         $('#txt-store-name').attr('placeholder', name);
+         $('#txt-store-des').attr('placeholder', '');
+         $('#txt-store-image').attr('src', img);
+         $('#txt-store-address').attr('placeholder', address);
+         $('#txtId').attr('value', id);
+      })
+      var loadFile = function (event) {
+         var image = document.getElementById('txt-store-image');
+         image.src = URL.createObjectURL(event.target.files[0]);
+      };
+   </script>
 </body>
 
 </html>
