--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,7 +32,7 @@
 	<div class="content-wrapper">
 		<div class="container">
 
-			<h4 class="header-line">THỐNG KÊ TỔNG THU - SL ĐƠN HÀNG - SL NGƯỜI DÙNG</h4>
+			<h4 class="header-line">THỐNG KÊ TỔNG DOANH THU - SỐ LƯỢNG ĐƠN HÀNG - SỐ LƯỢNG NGƯỜI DÙNG</h4>
 			<div class="row">
 				<div class="col-md-4 col-sm-4 col-xs-6">
 					<div class="alert alert-info back-widget-set text-center">
@@ -62,7 +62,7 @@
 				<div class="col-md-12 col-sm-12 col-xs-12">
 					<div class="panel">
 						<div class="panel-heading header-panel">
-							Top sản phẩm bán chạy nhất
+							Top 10 sản phẩm bán chạy nhất
 						</div>
 						<div class="panel-body">
 							<div class="table-responsive">
