--- a/views/pages/order.ejs
+++ b/views/pages/order.ejs
@@ -72,7 +72,7 @@
                                         <tr>
                                             <th>STT</th>
                                             <th>Mã đơn hàng</th>
-                                            <th>Tên Khách hàng</th>
+                                            <th>Tên khách hàng</th>
                                             <th>Số điện thoại</th>
                                             <th>Địa chỉ giao hàng</th>
                                             <th>Ngày đặt hàng</th>
