--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -56,7 +56,7 @@
                               <tr>
                                  <th class="style-middle-center">STT</th>
                                  <th class="style-middle-center">Mã người dùng</th>
-                                 <th class="style-middle-center">Họ Tên</th>
+                                 <th class="style-middle-center">Họ tên</th>
                                  <th class="style-middle-center">Địa chỉ</th>
                                  <th class="style-middle-center">Số điện thoại</th>
                                  <th class="style-middle-center">Chức năng</th>
